--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^4.0.3
   simple_barcode_scanner: ^0.0.8
   provider: ^6.0.5
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
